# RatioUp

./: .env  .gitignore  .woodpecker.yaml  Cargo.toml  Docker.env  Dockerfile  Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.armv7hf  README.md  config.json  default.nix  devenv.nix  flake.nix  install.sh  main  publish-to-dockerhub.sh  shell.nix
.github/workflows/: audit.yaml  build.yml  coverage.yml  cross_compile.yaml  docker-image.yml  rust-clippy.yml  rust.yaml
cli/: README.md
res/: config.json
src/: algorithm.rs  bencode.rs  client.old.rs  client.rs  config.rs  directory.rs  json_output.rs  main.rs  messages.rs  routes.rs  scheduler.rs  torrent.rs  tracker.rs  utils.rs  watcher.rs  web.rs
src/announcer/: mod.rs  scheduler.rs  tracker.rs  udp.rs
src/webui/: mod.rs  routes.rs  server.rs
static/: Docker.env  Dockerfile  app.js  index.html
static/css/: app.css
static/js/: sha1.js  torrent.js
static/lib/: owl.js
torrents/: (Symphonic Metal, Heavy Metal, Power Metal) Nightwish - Discography (93 CD + 4 WEB + 4 Blu-Ray) - 1997-2024, AAC (tracks), VBR 320 [rutracker-6077057].torrent2  educationaltimes71educ_archive.torrent
www/: index.html
