[package]
name = "RatioUp"
author = "slundi"
version = "1.2.3"
edition = "2021"
homepage = "https://codeberg.org/slundi/RatioUp"

[features]
udp = ["dep:bytes", "dep:reqwest"]

[source.vendored-sources]
directory = "vendor"

[dependencies]
rand = "0.8"
bytes = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["charset", "gzip"] }
tokio = { version = "1.36", features = ["rt", "fs", "net"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1.19"
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
byte-unit = "5"
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
], optional = true }
percent-encoding = "2"
fake-torrent-client = "0.9"

dotenv = "0.15"
log = "0.4"
simple_logger = "4"

#bittorrent parsing
serde_bytes = "0.11"
serde_bencode = "0.2"
serde_derive = "1"
hmac-sha1-compact = "1"
hex = "0.4"

# actix
actix = "0.13"
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
