[package]
name = "RatioUp"
authors = ["slundi"]
version = "1.2.6"
edition = "2024"
homepage = "https://codeberg.org/slundi/RatioUp"
keywords = ["torrent", "ratio", "cli"]

[dependencies]
fastrand = "2.3"
chrono = { version = "0.4.41", features = ["serde"] }
ureq = { version = "2", features = ["charset", "gzip"] }
tokio = { version = "1.45", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
once_cell = "1.21"
sanitize-filename = "0.6"
url = "2.5.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip", "brotli", "deflate"], optional = true }
fake-torrent-client = "0.9.9"

xdg = "3.0"
toml = "0.8"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# bittorrent parsing
bendy = { version = "0.3", features = ["std"] }
sha1 = "0.10"
