[package]
name = "RatioUp"
authors = ["slundi"]
version = "1.2.7"
edition = "2024"
homepage = "https://codeberg.org/slundi/RatioUp"
keywords = ["torrent", "ratio", "cli"]

[dependencies]
fastrand = "2.3"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.47", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
once_cell = "1.21"
sanitize-filename = "0.6"
url = "2.5.4"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip"] }
fake-torrent-client = "0.9.9"

xdg = "3.0"
toml = "0.9"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3"

# bittorrent parsing
sha1_smol = "1.0"
